kubernetes-istio/resilience-tests/review-virtual-service-with-faults.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: review-vs
spec:
  hosts:
    - review
  http:
    - route:
        - destination:
            host: review
      fault:
        abort:
          httpStatus: 500
          percent: 20
